Changed the way we manage the inline filename tab so it uses position: fixed, which improves the way it performs on resize and handles horizontal scrolling properly. (There is a bug where it overlaps the bottom scrollbar.) Lightened up the appearance of the inline editor. Refactored some functions out of InlineEditorProviders.htmlToCSSProvider() to make it shorter.

--- a/src/brackets.less
+++ b/src/brackets.less
@@ -60,6 +60,10 @@ a, img {
        so we need to .clearfix the children. */
     .clearfix;
 
+    /* Make sure the inline tabs don't go over the menubar */
+    position: relative;
+    z-index: 21;
+
     .brand {
         .sane-box-model;
         margin-left: 0;
@@ -118,6 +122,11 @@ a, img {
     border-top-style: solid;
     border-width: 1px;
     border-color: lighten(@bc-grey, @bc-color-step-size*4);
+    background-color: #ffffff;
+    
+    /* Make sure the inline tabs don't go over the lint results */
+    position: relative;
+    z-index: 20;
 
     .toolbar {
         height: auto;
@@ -312,13 +321,13 @@ a, img {
 
 /* Styles for inline editors */
 .inlineCodeEditor {
-    border-top:    1px solid #A0A0A0;
-    border-bottom: 1px solid #A0A0A0;
-}
-
-.inlineCodeEditor .CodeMirror-scroll {
-    /* Don't show horizontal scrollbars within an inline editor--we want to scroll the outer editor */
-    overflow-x: hidden;
+    border-top:    1px solid #C0C0C0;
+    border-bottom: 1px solid #C0C0C0;
+    
+    .CodeMirror-scroll {
+        /* Don't show horizontal scrollbars within an inline editor--we want to scroll the outer editor */
+        overflow-x: hidden;
+    }
 }
 
 /* Styles for the search dialog--this is temporary, only for debugging */
