--- a/src/styles/brackets_codemirror_override.less
+++ b/src/styles/brackets_codemirror_override.less
@@ -69,24 +69,24 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: @accent-bracket;}
 
 .inlineCodeEditor {
     .cm-s-default {
-        background-color: #E6E6E6;
+        background-color: #F3F3F3;
     }
     .filename {
-        position: absolute;
-        top: 0;
+        position: fixed;
+        right: 40px;
         background: #FFF;
         padding: 0px 4px 3px;
         font-family: "Lucida Grande";
         font-size: 12px;
-        border: solid #808080;
+        border: solid #C0C0C0;
         border-width: 0px 1px 1px;
         border-bottom-right-radius: 3px 5px;
         border-bottom-left-radius: 3px 5px;
-        z-index: 11;
+        z-index: 10;
     }
     .shadow {
         display: block;
-        height: 10px;
+        height: 6px;
         width: 100%;
         position: absolute;
         content: " ";
@@ -95,10 +95,10 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: @accent-bracket;}
     }
     .shadow.top {
         top: 0px;
-        background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
+        background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
     }
     .shadow.bottom {
         bottom: 0px;
-        background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+        background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
     }
 }
